--- a/catalogo/src/main/resources/application.properties
+++ b/catalogo/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+## CONFIGURAÇÕES GERAIS
 
+# Sessao de usuario
+spring.session.store-type=redis
+server.servlet.session.timeout=60m
+
+# Database da aplicacao
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
