Brincando com templates

--- a/catalogo/src/main/resources/application.properties
+++ b/catalogo/src/main/resources/application.properties
@@ -8,3 +8,6 @@ server.servlet.session.timeout=60m
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# URL de elementos estáticos (default = raiz)
+spring.mvc.static-path-pattern=/static/**
