--- a/catalogo/src/main/resources/application.properties
+++ b/catalogo/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.jpa.hibernate.ddl-auto=update
 
 # URL de elementos estáticos (default = raiz)
 spring.mvc.static-path-pattern=/static/**
+
+# MySQL local
+spring.datasource.url=jdbc:mysql://localhost:3306/catalogo?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=local
+spring.datasource.password=local
+
+# Redis local
+spring.redis.host=localhost
+spring.redis.password=local
+spring.redis.port=6379
