Cadastro de administradores - requer ir à base de dados e adicionar um manualmente

--- a/catalogo/src/main/resources/application.properties
+++ b/catalogo/src/main/resources/application.properties
@@ -4,6 +4,9 @@
 spring.session.store-type=redis
 server.servlet.session.timeout=60m
 
+# Suportar _method nos forms
+spring.mvc.hiddenmethod.filter.enabled=true
+
 # Database da aplicacao
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
