Melhorias: * criar o executor e o scheduler uma única vez estabilizou o uso da memória no teste de carga * usando pool de threads * tempo de timeout e número de threads configurável

--- a/timeout/src/main/resources/application.properties
+++ b/timeout/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=${RABBITMQ_PORT}
 spring.rabbitmq.username=${RABBITMQ_USER}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+
+timeout.seconds=300
+timeout.threadpool.howmany=4
