--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
   rabbitmq:
     container_name: rabbitmq
     image: rabbitmq:3.12-management
+    hostname: rabbitmq
     ports:
       - 5672:5672
       - 15672:15672
