--- a/servico-teste/pom.xml
+++ b/servico-teste/pom.xml
@@ -7,13 +7,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.1</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
 	<groupId>com.derso.architecture</groupId>
-	<artifactId>timeout</artifactId>
+	<artifactId>servico-teste</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>timeout</name>
-	<description>Demo project for Spring Boot</description>
+	<name>servico-teste</name>
+	<description>Prova de conceito de um serviço em um fluxo SAGAS</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
