Conectando o serviço de timeouts com o de teste

--- a/servico-teste/src/main/resources/application.properties
+++ b/servico-teste/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-server.port=${SERVER_PORT:8080}
+server.port=${SERVER_PORT:8081}
 
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=${RABBITMQ_PORT}
 spring.rabbitmq.username=${RABBITMQ_USER}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 
-timeout.seconds=300
-timeout.threadpool.howmany=4
+timeout.main-url=${TIMEOUT_MAIN_URL}
