--- a/timeout/src/main/resources/application-development.properties
+++ b/timeout/src/main/resources/application-development.properties
@@ -2,3 +2,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=dev
 spring.rabbitmq.password=dev
+
+timeout.seconds=2
