Somos capazes de receber a solicitação de timeout

--- a/servico-teste/src/main/resources/application.properties
+++ b/servico-teste/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.rabbitmq.username=${RABBITMQ_USER}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 
 timeout.main-url=${TIMEOUT_MAIN_URL}
+timeout.rabbitmq-exchange=testes
+timeout.rabbitmq-queue=testes
