A recepção é de qualquer mensagem, não apenas timeouts

--- a/servico-teste/src/main/resources/application.properties
+++ b/servico-teste/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 
 timeout.main-url=${TIMEOUT_MAIN_URL}
 timeout.rabbitmq-exchange=testes
-timeout.rabbitmq-queue=testes
+
+service.rabbitmq-queue=testes
