--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,18 @@ services:
       - ./db:/var/lib/mysql
     networks:
       - sagas
+      
+  cache:
+    container_name: cache_redis
+    image: redis:7.2.1-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes: 
+      - ./cache:/data
+    networks:
+      - sagas
 
   rabbitmq:
     container_name: rabbitmq
