Trampo para configurar a injeção das entidades e repositórios em outros pacotes, em outro projeto Maven!

--- a/disparotimeouts/pom.xml
+++ b/disparotimeouts/pom.xml
@@ -25,6 +25,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<!-- 
+			Projeto lib: `maven install` no lib + `maven ...` neste.
+		-->		
+		<dependency>
+			<groupId>com.derso.architecture</groupId>
+			<artifactId>lib</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
